# image2ascii

./: next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
pkg/: image2ascii.d.ts  image2ascii.js  image2ascii_bg.wasm  image2ascii_bg.wasm.d.ts  package.json
public/pkg/: image2ascii_bg.wasm  pixel2char_bg.wasm
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AsciiDisplay.tsx  ImageUpload.tsx  ParameterControls.tsx  WasmRender.tsx
src/contexts/: WasmContext.tsx
src/hooks/: useAsciiConversion.ts
wasm/: Cargo.toml  README.md
wasm/benches/: image_processing_benchmark.rs
wasm/src/: lib.rs  main.rs
