[package]
name = "image2ascii"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
image = "0.25.6"
imageproc = "0.25.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["console_error_panic_hook"]
