[package]
name = "image2ascii"
version = "0.1.0"
edition = "2024"
description = "A tool to convert images to ASCII art, available as a library, WASM module, and CLI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndPuQing/image2ascii"
readme = "README.md"
keywords = ["image", "ascii", "cli", "wasm"]
categories = ["command-line-utilities", "multimedia::images", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "image2ascii-cli"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Common dependencies
image = "0.25.6"
imageproc = "0.25.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["serde_derive"] }

# WASM-specific dependencies
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }

# CLI-specific dependencies
anyhow = { version = "1.0.86", optional = true }
clap = { version = "4.5.11", features = ["derive"], optional = true }
colored = { version = "2.1.0", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.50"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "image_processing_benchmark"
harness = false

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook"]
cli = ["clap", "anyhow", "colored"]


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
